# matematisk

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md  justfile  test.dot
cas_bin/: Cargo.toml
cas_bin/src/: main.rs
cas_lib/: Cargo.toml
cas_lib/src/: cas.rs  lib.rs  util.rs
cas_lib/src/cas/: error.rs  lexer.rs  node.rs  parser.rs  simplify.rs  token.rs
cas_lib/src/cas/frontend/: lexer.rs  parser.rs
cli/: Cargo.toml
cli/src/: main.rs  repl.rs
common/: Cargo.toml
common/src/: error.rs  function.rs  lib.rs  node.rs  token.rs  util.rs
compiler/: Cargo.toml
compiler/src/: cas.rs
compiler/src/cas/: backend.rs  simplify.rs
compiler/src/cas/backend/: environment.rs  format.rs  runtime.rs  stdenv.rs  value.rs  visit.rs
compiler/src/cas/eval/: format.rs  mod.rs  runtime.rs  stdenv.rs  value.rs
compiler/src/cas/frontend/: lexer.rs  parser.rs
compiler/src/cas/syntax/: lexer.rs  parser.rs
docs/: Grammar.ebnf  Project.md  README.md  Roadmap.md
examples/: issue.mx  issue2.mx  test.mx  test2.mx
gui/: Cargo.toml
gui/src/: app.rs  lib.rs  main.rs  wasm.rs
gui/src/app/: app.rs  gui_app.rs  widgets.rs
gui/src/app/widgets/: inspector.rs
gui/src/wasm/: abi.rs  wasm.rs
web/: Cargo.toml  index.html  package-lock.json  package.json
web/app/: package-lock.json  package.json  vite.config.ts
web/app/src/lib/components/: EguiCanvas.svelte
web/app/src/routes/: +layout.svelte  +page.svelte
web/src/: app.rs  lib.rs
web/src/lib/components/: EguiCanvas.svelte
web/src/routes/: +layout.svelte  +page.svelte
