[package]
name = "matex-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
matex-common = { path = "../common" }


[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0.159", features = ["derive"]}

