[package]
name = "matex-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
matex-compiler = { path = "../compiler" }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
